applied new guidelines of Rcpp
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/Rchemcpp@87298 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/Rchemcpp.Rnw
+++ b/vignettes/Rchemcpp.Rnw
@@ -200,6 +200,7 @@ the handling of molecules in \R\ easy and provide a lot of utility functions,
 like plotting.
 
 <<fig=TRUE>>=
+library(ChemmineR)
 sdfFileName <- list.files(sdfolder,full.names=TRUE,pattern="small")
 sdfSet <- read.SDFset(sdfFileName)
 plot(sdfSet[2],print=FALSE)
