--- a/vignettes/literature.bib
+++ b/vignettes/literature.bib
@@ -1450,3 +1450,18 @@ doi = "http://dx.doi.org/10.1016/S0027-5107(00)00064-6",
 url = "http://www.sciencedirect.com/science/article/pii/S0027510700000646",
 author = "Kristien Mortelmans and Errol Zeiger"
 }
+
+
+@article{Klambauer2015,
+author = {Klambauer, G\"unter and Wischenbart, Martin and Mahr, Michael and Unterthiner, Thomas and Mayr, Andreas and Hochreiter, Sepp}, 
+title = {Rchemcpp: a web service for structural analoging in ChEMBL, Drugbank and the Connectivity Map},
+year = {2015}, 
+doi = {10.1093/bioinformatics/btv373}, 
+abstract ={Summary: We have developed Rchempp, a web service that identifies structurally similar compounds (structural analogs) in large-scale molecule databases. The service allows compounds to be queried in the widely used ChEMBL, DrugBank and the Connectivity Map databases. Rchemcpp utilizes the best performing similarity functions, i.e. molecule kernels, as measures for structural similarity. Molecule kernels have proven superior performance over other similarity measures and are currently excelling at machine learning challenges. In order to considerably reduce computational time, and thereby make it feasible as a web service, a novel efficient prefiltering strategy has been developed, which maintains the sensitivity of the method. By exploiting information contained in public databases, the web service facilitates many applications crucial for the drug development process, such as prioritizing compounds after screening or reducing adverse side-effects during late phases. Rchemc
+pp was used in the DeepTox pipeline that has won the Tox21 Data Challenge and is frequently used by researchers in pharmaceutical companies.Availability: The web service and the R package are freely available via http://shiny.bioinf.jku.at/Analoging/ and via Bioconductor.}, 
+URL = {http://bioinformatics.oxfordjournals.org/content/early/2015/06/17/bioinformatics.btv373.abstract}, 
+eprint = {http://bioinformatics.oxfordjournals.org/content/early/2015/06/17/bioinformatics.btv373.full.pdf+html}, 
+journal = {Bioinformatics} 
+}
+
+
